another section add

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="logo">
-        <img src="./asset/logo 2.png" alt="Medifit Logo"> <span>Medifit</span>
+        <img src="./asset/logo 2.png" alt=""> <span>Medifit</span>
       </div>
       <nav class="nav">
         <ul>
@@ -20,11 +20,11 @@
           <li><a href="#">Shop</a></li>
           <li><a href="#">Pages</a> </li>
           <li><a href="#">About</a></li>
-           <li><a href="#">Contact</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <div class="nav-icons">
-        <a href="#"><img src="/asset/icons8-search-50.png" alt=""></a>
+        <a href="#"><img src="./asset/icons8-search-50.png" alt=""></a>
         <a href="#"><img src="./asset/icons8-cart-50.png" alt=""></a>
       </div>
     </div>
@@ -36,13 +36,100 @@
       <div class="hero-content">
         <h1>Your trusted <br>care now <br> and always</h1>
         <p>For the best results, align your health needs with <br> your medication plan.</p>
-        <a href="#" class="btn">Shop now</a>
+        <a class="btn" href="#">Shop now</a>
       </div>
       <div class="hero-image">
-        <img src="./asset/medifit.png" alt="Medication bottles">
+        <img src="./asset/medifit.png" alt="">
       </div>
     </div>
   </div>
+
+
+  <div class="category-section">
+    <div class="container">
+      <h2>Shop by Category</h2>
+      <div class="category-grid">
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/medicine.png" alt=""></div>
+          <div class="category-name">Medicine</div>
+          <div class="item-count">32 Items</div>
+        </div>
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/health care.png" alt=""></div>
+          <div class="category-name">Health care</div>
+          <div class="item-count">20 Items</div>
+        </div>
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/beauty care.png" alt=""></div>
+          <div class="category-name">Beauty care</div>
+          <div class="item-count">30 Items</div>
+        </div>
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/fitness.png" alt=""></div>
+          <div class="category-name">Fitness</div>
+          <div class="item-count">35 Items</div>
+        </div>
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/lab equiment.png" alt=""></div>
+          <div class="category-name">Lab equipment</div>
+          <div class="item-count">25 Items</div>
+        </div>
+        <div class="category-card">
+          <div class="category-icon"><img src="./asset/medikits.png" alt=""></div>
+          <div class="category-name">Medkits</div>
+          <div class="item-count">25 Items</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <section class="promotions-section">
+        <div class="container">
+            <div class="promotions-grid">
+                <div class="promo-card sanitizer-promo">
+                    <div class="promo-tag">Sanitizer</div>
+                    <div class="promo-content">
+                        <h3>Hand sanitizer collection</h3>
+                        <a href="#">Shop now</a>
+                    </div>
+                    <div class="promo-image">
+                        <img src="./asset/hand sanitize.png" alt="">
+                    </div>
+                </div>
+                <div class="promo-card face-wash-promo">
+                    <div class="promo-tag">Top deals</div>
+                    <div class="promo-content">
+                        <h3>Face wash sale collection</h3>
+                        <a href="#">Discover now </a>
+                    </div>
+                    <div class="promo-image">
+                        <img src="./asset/face wash.png" alt="">
+                    </div>
+                </div>
+                <div class="promo-card face-mask-promo">
+                    <div class="promo-tag">Face mask</div>
+                    <div class="promo-content">
+                        <h3>Facial mask deals save up to 50%</h3>
+                        <a href="#">Discover now </a>
+                    </div>
+                    <div class="promo-image">
+                        <img src="./asset/facial deals.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
+
+
+
+
+
+
+
+
 
 
 
