footer section done

--- a/index.html
+++ b/index.html
@@ -85,52 +85,182 @@
 
 
 
-  <section class="promotions-section">
-        <div class="container">
-            <div class="promotions-grid">
-                <div class="promo-card sanitizer-promo">
-                    <div class="promo-tag">Sanitizer</div>
-                    <div class="promo-content">
-                        <h3>Hand sanitizer collection</h3>
-                        <a href="#">Shop now</a>
-                    </div>
-                    <div class="promo-image">
-                        <img src="./asset/hand sanitize.png" alt="">
-                    </div>
-                </div>
-                <div class="promo-card face-wash-promo">
-                    <div class="promo-tag">Top deals</div>
-                    <div class="promo-content">
-                        <h3>Face wash sale collection</h3>
-                        <a href="#">Discover now </a>
-                    </div>
-                    <div class="promo-image">
-                        <img src="./asset/face wash.png" alt="">
-                    </div>
-                </div>
-                <div class="promo-card face-mask-promo">
-                    <div class="promo-tag">Face mask</div>
-                    <div class="promo-content">
-                        <h3>Facial mask deals save up to 50%</h3>
-                        <a href="#">Discover now </a>
-                    </div>
-                    <div class="promo-image">
-                        <img src="./asset/facial deals.png" alt="">
-                    </div>
-                </div>
-            </div>
+  <div class="promotions-section">
+    <div class="container">
+      <div class="promotions-grid">
+        <div class="promo-card sanitizer-promo">
+          <div class="promo-tag">Sanitizer</div>
+          <div class="promo-content">
+            <h3>Hand sanitizer collection</h3>
+            <a href="#">Shop now</a>
+          </div>
+          <div class="promo-image">
+            <img src="./asset/hand sanitize.png" alt="">
+          </div>
         </div>
-</section>
+        <div class="promo-card face-wash-promo">
+          <div class="promo-tag">Top deals</div>
+          <div class="promo-content">
+            <h3>Face wash sale collection</h3>
+            <a href="#">Discover now </a>
+          </div>
+          <div class="promo-image">
+            <img src="./asset/face wash.png" alt="">
+          </div>
+        </div>
+        <div class="promo-card face-mask-promo">
+          <div class="promo-tag">Face mask</div>
+          <div class="promo-content">
+            <h3>Facial mask deals save up to 50%</h3>
+            <a href="#">Discover now </a>
+          </div>
+          <div class="promo-image">
+            <img src="./asset/facial deals.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <h2>Explore Our store Collection</h2>
+
+    <div class="product-grid">
+
+
+      <div class="product-card">
+        <img src="./asset/b12 medicine.png" alt="">
+        <div class="product-title">B12 medicine</div>
+        <div class="price">$19.00 <span class="old-price">$25.00</span></div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/tonometer.png" alt="">
+        <div class="product-title">Tonometer</div>
+        <div class="price">$19.00</div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/ecg.png" alt="">
+        <div class="product-title">ECG cardiograph</div>
+        <div class="price">$20.00 <span class="old-price">$35.00</span></div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/blood.png" alt="">
+        <div class="product-title">Blood glucose meter</div>
+        <div class="price">$15.00 </div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/lab hand.png" alt="Lab hand gloves">
+        <div class="product-title">Lab hand gloves</div>
+        <div class="price">$20.00 <span class="old-price">$35.00</span></div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/stethoscope.png" alt="">
+        <div class="product-title">Stethoscope</div>
+        <div class="price">$20.00 <span class="old-price">$35.00</span></div>
+      </div>
+
+
+      <div class="product-card">
+        <img src="./asset/inhaler.png" alt="">
+        <div class="product-title">Inhaler pressure drop</div>
+        <div class="price">$35.00</div>
+      </div>
+
+      <div class="product-card">
+        <img src="./asset/multi vitamin.png" alt="">
+        <div class="product-title">Multi vitamin</div>
+        <div class="price">$20.00</div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="newsletter-container">
+    <div class="newsletter-img">
+      <img src="./asset/Mask group.png" alt="Newsletter Image">
+    </div>
+
+    <div class="newsletter-box">
+      <small>Join our newsletter</small>
+      <h2>Sign Up for an Instant <br> 15% Discount</h2>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Enter Email" required>
+        <button type="submit">Sign up</button>
+      </form>
+    </div>
+  </div>
 
 
 
+  <footer>
+    <div class="footer-container">
+
+      <div class="footer-column">
+        <h4>Pages</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Privacy policy</a></li>
+          <li><a href="#">FAQs</a></li>
+        </ul>
+      </div>
 
 
+      <div class="footer-column">
+        <h4>Utility</h4>
+        <ul>
+          <li><a href="#">Style guide</a></li>
+          <li><a href="#">Instruction</a></li>
+          <li><a href="#">Changelog</a></li>
+          <li><a href="#">Licenses</a></li>
+          <li><a href="#">Link in bio</a></li>
+          <li><a href="#">Error 404</a></li>
+          <li><a href="#">Password protected</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-logo">
+
+        <div class="footer-logo-cnt">
+          <h2><img src="./asset/logo 2.png" alt=""> Medifit </h2>
+        </div>
+        <p>We provides the ultimate solution for your online store and all the healthcare needs.</p>
+
+      </div>
 
 
+      <div class="footer-column">
+        <h4>Address</h4>
+        <p>1640 Parker Rd. Allentown,<br>New Mexico 31134</p>
+
+        <div class="footer-column2 ">
+          <h4>Contact</h4>
+          <p> hello@gmail.com</p>
+          <p> (209) 555-0104</p>
+        </div>
+
+      </div>
 
 
+    </div>
 
+
+  </footer>
 
 
 </body>
